--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
