--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,17 @@
             <version>20090211</version>
         </dependency>
 
+        <!--<dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.3.4</version>
+        </dependency>
+
 
     </dependencies>
 
